add maven-surefire-plugin to eliminate warning